--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
         android:layout_marginLeft="68dp"
+        android:visibility="invisible"
         android:id="@+id/btn_private"
         android:text="@string/private_album"
         app:layout_constraintTop_toBottomOf="@+id/btn_capture_photo"
@@ -45,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="68dp"
         android:id="@+id/btn_public"
+        android:visibility="invisible"
         android:text="@string/public_album"
         app:layout_constraintTop_toBottomOf="@+id/btn_capture_photo"
         app:layout_constraintStart_toEndOf="@+id/btn_private"
