--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_creator"
+        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
