--- a/app/src/main/res/layout/album_creator_layout.xml
+++ b/app/src/main/res/layout/album_creator_layout.xml
@@ -70,5 +70,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:text="Back"
+        android:layout_width="78dp"
+        android:layout_height="50dp"
+        android:id="@+id/back_button"
+        app:layout_constraintTop_toBottomOf="@+id/createButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="17dp" android:layout_marginRight="17dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
