--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -52,4 +52,19 @@
         app:layout_constraintStart_toEndOf="@+id/btn_private"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="580dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_private"
+        app:layout_constraintStart_toStartOf="@+id/btn_private"
+        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/album_recycler_view"/>
+    <Button
+        android:text="Back"
+        android:layout_width="78dp"
+        android:layout_height="50dp"
+        android:id="@+id/back_button_1" app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="17dp" android:layout_marginRight="17dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
