--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,22 +21,25 @@
         android:gravity="center"
         android:textSize="30sp"
         android:id="@+id/album_title"
-        app:layout_constraintStart_toStartOf = "parent"/>
+        app:layout_constraintStart_toStartOf = "parent"
+        app:layout_constraintBottom_toTopOf="@+id/grid_view"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="600dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@+id/album_title"
         app:layout_constraintStart_toStartOf = "@+id/album_title"
-        app:layout_constraintBottom_toTopOf="@+id/back_btn"
         android:numColumns = "2"
         android:id="@+id/grid_view"/>
     <Button
         android:id="@+id/back_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/back"
         app:layout_constraintTop_toBottomOf="@+id/grid_view"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
