--- a/app/src/main/res/layout/private_album_list_layout.xml
+++ b/app/src/main/res/layout/private_album_list_layout.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent" android:id="@+id/private_album_recycler_view"/>
 
     <Button
-        android:text="Back"
+        android:text="@string/back"
         android:layout_width="78dp"
         android:layout_height="50dp"
         android:id="@+id/back_button" app:layout_constraintTop_toTopOf="parent"
