--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -23,6 +23,21 @@
         android:id="@+id/album_title"
         app:layout_constraintStart_toStartOf = "parent"
         app:layout_constraintBottom_toTopOf="@+id/grid_view"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_userlist"
+        android:text="User List"
+        android:layout_marginStart="136dp"
+        android:layout_marginLeft="136dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginRight="135dp"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@+id/album_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
