--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:layout_gravity="center">
+    android:layout_gravity="center" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/main_view"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,7 +17,8 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
-        app:layout_constraintTop_toBottomOf="@+id/main_view"
+        android:layout_marginTop="200dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +48,7 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_creator"
+        app:layout_constraintTop_toBottomOf="@+id/btn_private_album"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +62,7 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
+        app:layout_constraintTop_toBottomOf="@+id/btn_creator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
