--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -39,6 +39,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_comments"
+        android:text="Comments"
+        android:layout_marginStart="136dp"
+        android:layout_marginLeft="136dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginRight="135dp"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@+id/album_title"
+        app:layout_constraintStart_toEndOf="@id/btn_userlist"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="600dp"
