--- a/app/src/main/res/layout/add_comment.xml
+++ b/app/src/main/res/layout/add_comment.xml
@@ -21,6 +21,7 @@
         android:text="Delete"
         android:layout_width="78dp"
         android:layout_height="50dp"
+        android:visibility="visible"
         android:id="@+id/comment_delete_button" app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="17dp" android:layout_marginRight="17dp"/>
