--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -38,6 +38,21 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/to_mod_button"
+        android:text="Mod View"
+        android:layout_marginStart="136dp"
+        android:layout_marginLeft="136dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginRight="135dp"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@+id/album_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_userlist"
+        />
 
     <Button
         android:layout_width="wrap_content"
@@ -79,6 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="68dp"
         android:id="@+id/btn_delete"
+        android:visibility="invisible"
         android:text="@string/delete"
         app:layout_constraintStart_toEndOf="@+id/back_btn"
         app:layout_constraintEnd_toEndOf="parent"
