--- a/app/src/main/res/layout/mod_list_layout.xml
+++ b/app/src/main/res/layout/mod_list_layout.xml
@@ -17,10 +17,10 @@
         app:layout_constraintEnd_toEndOf="parent" android:id="@+id/mod_recycler_view"/>
 
     <Button
-        android:text="Back to Albums"
+        android:text="Back"
         android:layout_width="78dp"
         android:layout_height="50dp"
-        android:id="@+id/back_button" app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/mod_back_button" app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="17dp" android:layout_marginRight="17dp"/>
