--- a/app/src/main/res/layout/mod_users.xml
+++ b/app/src/main/res/layout/mod_users.xml
@@ -33,6 +33,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:text="Mod"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.129"
@@ -44,6 +45,7 @@
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:text="De-Mod"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -55,6 +57,7 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:text="Ban"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
