--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -57,6 +57,7 @@
         android:layout_height="wrap_content"
         android:text="Sign Up"
         android:layout_marginTop="63dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         app:layout_constraintTop_toBottomOf="@+id/passwordBox" app:layout_constraintBottom_toTopOf="@id/loginButton1"
         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp" app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +68,7 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:layout_marginTop="63dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         app:layout_constraintTop_toBottomOf="@+id/createButton" app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp" app:layout_constraintStart_toStartOf="parent"
