--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,17 @@
     android:layout_gravity="center" >
 
 
-    <Button
+    <TextView
+        android:id="@+id/main_title_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_camera"
-        android:text="@string/take_picture"
-        android:layout_marginStart="136dp"
-        android:layout_marginLeft="136dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginRight="135dp"
-        android:layout_marginTop="200dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="32dp"
+        android:textSize="25dp"
+        android:text="Welcome "
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -33,10 +29,13 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
+        android:layout_marginTop="200dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
         />
 
     <Button
@@ -48,7 +47,9 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_private_album"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
+        app:layout_constraintTop_toBottomOf="@+id/main_title_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +63,8 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         app:layout_constraintTop_toBottomOf="@+id/btn_creator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -76,6 +79,8 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         app:layout_constraintTop_toBottomOf="@+id/btn_public_album"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
