--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -25,6 +25,7 @@
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
         android:text="@string/take_picture"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:id="@+id/btn_capture_photo"
         app:layout_constraintTop_toBottomOf="@+id/image"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:visibility="invisible"
         android:id="@+id/btn_private"
         android:text="@string/private_album"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         app:layout_constraintTop_toBottomOf="@+id/btn_capture_photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -48,6 +50,7 @@
         android:id="@+id/btn_public"
         android:visibility="invisible"
         android:text="@string/public_album"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         app:layout_constraintTop_toBottomOf="@+id/btn_capture_photo"
         app:layout_constraintStart_toEndOf="@+id/btn_private"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +66,7 @@
         android:text="Back"
         android:layout_width="78dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:id="@+id/back_button_1" app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
