--- a/app/src/main/res/layout/comments_layout.xml
+++ b/app/src/main/res/layout/comments_layout.xml
@@ -20,6 +20,7 @@
         android:text="Back"
         android:layout_width="78dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:id="@+id/comment_back_button" app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,6 +54,7 @@
         android:text="Comment"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:id="@+id/comment_button" app:layout_constraintTop_toBottomOf="@id/comment_back_button"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
