--- a/app/src/main/res/layout/invite_users.xml
+++ b/app/src/main/res/layout/invite_users.xml
@@ -21,6 +21,7 @@
         android:text="Invite"
         android:layout_width="78dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:id="@+id/invite_button" app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/leader_username"
         app:layout_constraintEnd_toEndOf="parent"
