--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -39,6 +39,7 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +55,7 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
