--- a/app/src/main/res/layout/mod_list_layout.xml
+++ b/app/src/main/res/layout/mod_list_layout.xml
@@ -20,6 +20,7 @@
         android:text="Back"
         android:layout_width="78dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:id="@+id/mod_back_button" app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
