--- a/app/src/main/res/layout/user_list_layout.xml
+++ b/app/src/main/res/layout/user_list_layout.xml
@@ -17,9 +17,10 @@
         app:layout_constraintEnd_toEndOf="parent" android:id="@+id/leader_recycler_view"/>
 
     <Button
-        android:text="Back to Albums"
+        android:text="Back"
         android:layout_width="78dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/common_google_signin_btn_text_dark"
         android:id="@+id/back_button" app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
